--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Y
+first_name: You
 middle_name: R.
 last_name: Name
 email: you@example.com
