--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
 # Blog - change to people 
 # -----------------------------------------------------------------------------
 
-blog_name: Blog  # your blog must have a name for it to show up in the nav bar
+blog_name:  # your blog must have a name for it to show up in the nav bar
 blog_description: A place for Lab members to share research findings with wide research community
 # permalink: /blog/:year/:title/
 
@@ -84,7 +84,7 @@ pagination:
   enabled: false
 
 # Comments
-disqus_shortname: Blog # put your disqus shortname
+disqus_shortname: # put your disqus shortname
 
 # -----------------------------------------------------------------------------
 # Collections
