--- a/_config.yml
+++ b/_config.yml
@@ -99,6 +99,9 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
+  people:
+    output: true
+    permalink: /people/:path/
 
 news_limit: 5
 
