--- a/_config.yml
+++ b/_config.yml
@@ -99,9 +99,6 @@ collections:
   projects:
     output: true
     permalink: /projects/:path/
-  people:
-    output: true
-    permalink: /people/:path/
 
 news_limit: 5
 
@@ -189,6 +186,8 @@ enable_navbar_social:       false  # enables displaying social links in the
 enable_project_categories:  true   # enables categorization of projects into
                                    # multiple categories
 enable_medium_zoom:         true   # enables image zoom feature (as on medium.com)
+enable_people_categories:  true   # enables categorization of projects into
+                                   # multiple categories
 
 # -----------------------------------------------------------------------------
 # Library versions
