--- a/_config.yml
+++ b/_config.yml
@@ -138,7 +138,7 @@ plugins:
   - jekyll-github-metadata
   - jekyll-feed
   - jekyll-paginate-v2
-  - jekyll/scholar
+#  - jekyll/scholar
   - jekyll-twitter-plugin
   - jemoji
 
