--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ wikidata_id: # your wikidata id
 dblp_url: # your DBLP profile url
 
 contact_note: >
-  Please feel free to reach us at z11008001@email.ncku.edu.tw.
+  Please click on the E-mail icon to reach us!
 
 google_analytics: UA-XXXXXXXXX # out your google-analytics code
 panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
