--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: Lab 604 # the website title (if blank, full name will be used instead)
 first_name: Philex
 middle_name: M.-Y.
 last_name: Fan
-email: myf20@cantab.ac.uk
+email: z11008001@ncku.edu.tw
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
